// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots FootballShape Past Home Loss 1`] = `
<div
  style={
    Object {
      "textAlign": "center",
    }
  }
>
  <svg
    className="sc-bdVaJa bTzeLw"
    height="40"
    result="L"
    type="past"
    viewBox="-1 -1 55 32"
    width="60"
  >
    <title>
      Title
    </title>
    <path
      className="football"
      d="M24.3585167,0.063430208 C35.1119935,-0.6284714 46.6072293,4.36977614 52.597914,13.6040857 C54.7297115,16.8900946 47.7985071,22.2410883 45.5381744,23.9389606 C40.8288076,27.476048 35.0715102,29.4979341 29.2104611,29.9219608 C18.5877272,30.6905583 5.76969773,25.7610451 0.275655548,16.0523187 C-1.54345102,12.8377005 6.1544002,7.27463607 8.34504921,5.68440188 C13.0321845,2.281693 18.5929238,0.434412586 24.3585166,0.0634300975"
      fill="url(#fill-pattern-past-home-loss)"
      onClick={[Function]}
    />
    <defs>
      <pattern
        className="pattern"
        height="10"
        id="fill-pattern-past-home-loss"
        patternTransform="rotate(45 50 50)"
        patternUnits="userSpaceOnUse"
        width="3"
      >
        <rect
          height="10"
          width="10"
        />
        <line
          y2="10"
        />
      </pattern>
    </defs>
  </svg>
  <p
    className="sc-bwzfXH kVijnH"
    onClick={[Function]}
    result="L"
    type="past"
  >
    Text
  </p>
</div>
`;

exports[`Storyshots FootballShape Past Home Tie 1`] = `
<div
  style={
    Object {
      "textAlign": "center",
    }
  }
>
  <svg
    className="sc-bdVaJa fCikNu"
    height="40"
    result="T"
    type="past"
    viewBox="-1 -1 55 32"
    width="60"
  >
    <title>
      Title
    </title>
    <path
      className="football"
      d="M24.3585167,0.063430208 C35.1119935,-0.6284714 46.6072293,4.36977614 52.597914,13.6040857 C54.7297115,16.8900946 47.7985071,22.2410883 45.5381744,23.9389606 C40.8288076,27.476048 35.0715102,29.4979341 29.2104611,29.9219608 C18.5877272,30.6905583 5.76969773,25.7610451 0.275655548,16.0523187 C-1.54345102,12.8377005 6.1544002,7.27463607 8.34504921,5.68440188 C13.0321845,2.281693 18.5929238,0.434412586 24.3585166,0.0634300975"
      fill="url(#fill-pattern-past-home-tie)"
      onClick={[Function]}
    />
    <defs>
      <pattern
        className="pattern"
        height="10"
        id="fill-pattern-past-home-tie"
        patternTransform="rotate(45 50 50)"
        patternUnits="userSpaceOnUse"
        width="3"
      >
        <rect
          height="10"
          width="10"
        />
        <line
          y2="10"
        />
      </pattern>
    </defs>
  </svg>
  <p
    className="sc-bwzfXH kVijnH"
    onClick={[Function]}
    result="T"
    type="past"
  >
    Text
  </p>
</div>
`;

exports[`Storyshots FootballShape Past Home Win 1`] = `
<div
  style={
    Object {
      "textAlign": "center",
    }
  }
>
  <svg
    className="sc-bdVaJa bOzLWC"
    height="40"
    result="W"
    type="past"
    viewBox="-1 -1 55 32"
    width="60"
  >
    <title>
      Title
    </title>
    <path
      className="football"
      d="M24.3585167,0.063430208 C35.1119935,-0.6284714 46.6072293,4.36977614 52.597914,13.6040857 C54.7297115,16.8900946 47.7985071,22.2410883 45.5381744,23.9389606 C40.8288076,27.476048 35.0715102,29.4979341 29.2104611,29.9219608 C18.5877272,30.6905583 5.76969773,25.7610451 0.275655548,16.0523187 C-1.54345102,12.8377005 6.1544002,7.27463607 8.34504921,5.68440188 C13.0321845,2.281693 18.5929238,0.434412586 24.3585166,0.0634300975"
      fill="url(#fill-pattern-past-home-win)"
      onClick={[Function]}
    />
    <defs>
      <pattern
        className="pattern"
        height="10"
        id="fill-pattern-past-home-win"
        patternTransform="rotate(45 50 50)"
        patternUnits="userSpaceOnUse"
        width="3"
      >
        <rect
          height="10"
          width="10"
        />
        <line
          y2="10"
        />
      </pattern>
    </defs>
  </svg>
  <p
    className="sc-bwzfXH kVijnH"
    onClick={[Function]}
    result="W"
    type="past"
  >
    Text
  </p>
</div>
`;

exports[`Storyshots MatchupHistory Marshall 2022 1`] = `
<div
  style={
    Object {
      "textAlign": "center",
    }
  }
>
  <div
    className="sc-bxivhb jLzLIs"
    style={
      Object {
        "marginTop": "32px",
      }
    }
  >
    <div
      className="sc-ifAKCX dkFkWg"
    >
      <p>
        Matchup History
      </p>
    </div>
    <div
      className="sc-EHOje cFYpLY"
    >
      <div
        className="sc-dnqmqq bhlmYc"
      >
        <div
          className="sc-iwsKbI krGmiY"
        >
          <div>
            <p>
              Meetings
            </p>
            <p>
              0
            </p>
          </div>
          <div>
            <p>
              Overall Record
            </p>
            <p>
              0
              -
              0
              -
              0
            </p>
          </div>
          <div>
            <p>
              Home
               Record
            </p>
            <p>
              0
              -
              0
              -
              0
            </p>
          </div>
        </div>
        <div
          className="sc-gZMcBi hyiyjK"
        >
          <div
            className="sc-bZQynM gIDkKP"
          >
            <p
              className="sc-htoDjs bJdOTV"
              onClick={[Function]}
            >
              <span>
                2
              </span>
              <span>
                0
              </span>
              <span>
                2
              </span>
              <span>
                2
              </span>
            </p>
            <div
              className="sc-gzVnrw ffITrg"
            >
              <svg
                className="sc-bdVaJa hWshii"
                height="40"
                type="future"
                viewBox="-1 -1 55 32"
                width="60"
              >
                <title>
                  2022 Notre Dame game.
                </title>
                <path
                  className="football"
                  d="M24.3585167,0.063430208 C35.1119935,-0.6284714 46.6072293,4.36977614 52.597914,13.6040857 C54.7297115,16.8900946 47.7985071,22.2410883 45.5381744,23.9389606 C40.8288076,27.476048 35.0715102,29.4979341 29.2104611,29.9219608 C18.5877272,30.6905583 5.76969773,25.7610451 0.275655548,16.0523187 C-1.54345102,12.8377005 6.1544002,7.27463607 8.34504921,5.68440188 C13.0321845,2.281693 18.5929238,0.434412586 24.3585166,0.0634300975"
                  fill="url(#fill-pattern-2022-1)"
                  onClick={[Function]}
                />
                <g
                  className="laces"
                  onClick={[Function]}
                  transform="translate(14, 11)"
                >
                  <line
                    x1="-6.9388939e-16"
                    x2="26"
                    y1="4"
                    y2="4"
                  />
                  <line
                    x1="3"
                    x2="3"
                    y1="8"
                    y2="4.4408921e-16"
                  />
                  <line
                    x1="8"
                    x2="8"
                    y1="8"
                    y2="4.4408921e-16"
                  />
                  <line
                    x1="13"
                    x2="13"
                    y1="8"
                    y2="4.4408921e-16"
                  />
                  <line
                    x1="18"
                    x2="18"
                    y1="8"
                    y2="4.4408921e-16"
                  />
                  <line
                    x1="23"
                    x2="23"
                    y1="8"
                    y2="4.4408921e-16"
                  />
                </g>
                <defs>
                  <pattern
                    className="pattern"
                    height="10"
                    id="fill-pattern-2022-1"
                    patternTransform="rotate(45 50 50)"
                    patternUnits="userSpaceOnUse"
                    width="3"
                  >
                    <rect
                      height="10"
                      width="10"
                    />
                    <line
                      y2="10"
                    />
                  </pattern>
                </defs>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots MatchupHistory Stanford 2006 1`] = `
<div
  style={
    Object {
      "textAlign": "center",
    }
  }
>
  <div
    className="sc-bxivhb jLzLIs"
    style={
      Object {
        "marginTop": "32px",
      }
    }
  >
    <div
      className="sc-ifAKCX dkFkWg"
    >
      <p>
        Matchup History
      </p>
    </div>
    <div
      className="sc-EHOje cFYpLY"
    >
      <div
        className="sc-dnqmqq bhlmYc"
      >
        <div
          className="sc-iwsKbI krGmiY"
        >
          <div>
            <p>
              Meetings
            </p>
            <p>
              34
            </p>
          </div>
          <div>
            <p>
              Overall Record
            </p>
            <p>
              21
              -
              13
              -
              0
            </p>
          </div>
          <div>
            <p>
              Home
               Record
            </p>
            <p>
              13
              -
              4
              -
              0
            </p>
          </div>
        </div>
        <div
          className="sc-gZMcBi hAREgt"
        >
          <div
            className="sc-bZQynM gIDkKP"
            result="W"
          >
            <p
              className="sc-htoDjs bswFnH"
              onClick={[Function]}
            >
              <span>
                1
              </span>
              <span>
                9
              </span>
              <span>
                2
              </span>
              <span>
                4
              </span>
            </p>
            <div
              className="sc-gzVnrw ffITrg"
            >
              <svg
                className="sc-bdVaJa eGMcze"
                height="40"
                result="W"
                type="past"
                viewBox="-1 -1 55 32"
                width="60"
              >
                <title>
                  1924 Notre Dame win by a score of 27 to 10.
                </title>
                <path
                  className="football"
                  d="M24.3585167,0.063430208 C35.1119935,-0.6284714 46.6072293,4.36977614 52.597914,13.6040857 C54.7297115,16.8900946 47.7985071,22.2410883 45.5381744,23.9389606 C40.8288076,27.476048 35.0715102,29.4979341 29.2104611,29.9219608 C18.5877272,30.6905583 5.76969773,25.7610451 0.275655548,16.0523187 C-1.54345102,12.8377005 6.1544002,7.27463607 8.34504921,5.68440188 C13.0321845,2.281693 18.5929238,0.434412586 24.3585166,0.0634300975"
                  fill="url(#fill-pattern-1924-9)"
                  onClick={[Function]}
                />
                <defs>
                  <pattern
                    className="pattern"
                    height="10"
                    id="fill-pattern-1924-9"
                    patternTransform="rotate(45 50 50)"
                    patternUnits="userSpaceOnUse"
                    width="3"
                  >
                    <rect
                      height="10"
                      width="10"
                    />
                    <line
                      y2="10"
                    />
                  </pattern>
                </defs>
              </svg>
              <p
                className="sc-bwzfXH kVijnH"
                onClick={[Function]}
                result="W"
                type="past"
              >
                27-10
              </p>
              <div
                className="sc-htpNat dVtQQo"
                type="right"
              >
                <div>
                   
                </div>
              </div>
            </div>
          </div>
          <div
            className="sc-bZQynM dvcDQq"
            result="W"
          >
            <div
              className="sc-gzVnrw ffITrg"
            >
              <svg
                className="sc-bdVaJa eGMcze"
                height="40"
                result="W"
                type="past"
                viewBox="-1 -1 55 32"
                width="60"
              >
                <title>
                  2005 Notre Dame win by a score of 38 to 31.
                </title>
                <path
                  className="football"
                  d="M24.3585167,0.063430208 C35.1119935,-0.6284714 46.6072293,4.36977614 52.597914,13.6040857 C54.7297115,16.8900946 47.7985071,22.2410883 45.5381744,23.9389606 C40.8288076,27.476048 35.0715102,29.4979341 29.2104611,29.9219608 C18.5877272,30.6905583 5.76969773,25.7610451 0.275655548,16.0523187 C-1.54345102,12.8377005 6.1544002,7.27463607 8.34504921,5.68440188 C13.0321845,2.281693 18.5929238,0.434412586 24.3585166,0.0634300975"
                  fill="url(#fill-pattern-2005-10)"
                  onClick={[Function]}
                />
                <defs>
                  <pattern
                    className="pattern"
                    height="10"
                    id="fill-pattern-2005-10"
                    patternTransform="rotate(45 50 50)"
                    patternUnits="userSpaceOnUse"
                    width="3"
                  >
                    <rect
                      height="10"
                      width="10"
                    />
                    <line
                      y2="10"
                    />
                  </pattern>
                </defs>
              </svg>
              <p
                className="sc-bwzfXH kVijnH"
                onClick={[Function]}
                result="W"
                type="past"
              >
                38-31
              </p>
            </div>
            <p
              className="sc-htoDjs dhtSTP"
              onClick={[Function]}
            >
              <span>
                2
              </span>
              <span>
                0
              </span>
              <span>
                0
              </span>
              <span>
                5
              </span>
            </p>
          </div>
          <div
            className="sc-bZQynM gIDkKP"
            result="W"
          >
            <p
              className="sc-htoDjs bJdOTV"
              onClick={[Function]}
            >
              <span>
                2
              </span>
              <span>
                0
              </span>
              <span>
                0
              </span>
              <span>
                6
              </span>
            </p>
            <div
              className="sc-gzVnrw ffITrg"
            >
              <svg
                className="sc-bdVaJa jruZlK"
                height="40"
                result="W"
                type="past"
                viewBox="-1 -1 55 32"
                width="60"
              >
                <title>
                  2006 Notre Dame win by a score of 31 to 10.
                </title>
                <path
                  className="football"
                  d="M24.3585167,0.063430208 C35.1119935,-0.6284714 46.6072293,4.36977614 52.597914,13.6040857 C54.7297115,16.8900946 47.7985071,22.2410883 45.5381744,23.9389606 C40.8288076,27.476048 35.0715102,29.4979341 29.2104611,29.9219608 C18.5877272,30.6905583 5.76969773,25.7610451 0.275655548,16.0523187 C-1.54345102,12.8377005 6.1544002,7.27463607 8.34504921,5.68440188 C13.0321845,2.281693 18.5929238,0.434412586 24.3585166,0.0634300975"
                  fill="url(#fill-pattern-2006-5)"
                  onClick={[Function]}
                />
                <defs>
                  <pattern
                    className="pattern"
                    height="10"
                    id="fill-pattern-2006-5"
                    patternTransform="rotate(45 50 50)"
                    patternUnits="userSpaceOnUse"
                    width="3"
                  >
                    <rect
                      height="10"
                      width="10"
                    />
                    <line
                      y2="10"
                    />
                  </pattern>
                </defs>
              </svg>
              <p
                className="sc-bwzfXH bDmYvW"
                onClick={[Function]}
                result="W"
                type="past"
              >
                31-10
              </p>
              <div
                className="sc-htpNat jNkVgE"
                type="left"
              >
                 
              </div>
              <div
                className="sc-htpNat dVtQQo"
                type="right"
              >
                 
              </div>
            </div>
          </div>
          <div
            className="sc-bZQynM dvcDQq"
            result="W"
          >
            <div
              className="sc-gzVnrw ffITrg"
            >
              <svg
                className="sc-bdVaJa eGMcze"
                height="40"
                result="W"
                type="past"
                viewBox="-1 -1 55 32"
                width="60"
              >
                <title>
                  2007 Notre Dame win by a score of 21 to 14.
                </title>
                <path
                  className="football"
                  d="M24.3585167,0.063430208 C35.1119935,-0.6284714 46.6072293,4.36977614 52.597914,13.6040857 C54.7297115,16.8900946 47.7985071,22.2410883 45.5381744,23.9389606 C40.8288076,27.476048 35.0715102,29.4979341 29.2104611,29.9219608 C18.5877272,30.6905583 5.76969773,25.7610451 0.275655548,16.0523187 C-1.54345102,12.8377005 6.1544002,7.27463607 8.34504921,5.68440188 C13.0321845,2.281693 18.5929238,0.434412586 24.3585166,0.0634300975"
                  fill="url(#fill-pattern-2007-11)"
                  onClick={[Function]}
                />
                <defs>
                  <pattern
                    className="pattern"
                    height="10"
                    id="fill-pattern-2007-11"
                    patternTransform="rotate(45 50 50)"
                    patternUnits="userSpaceOnUse"
                    width="3"
                  >
                    <rect
                      height="10"
                      width="10"
                    />
                    <line
                      y2="10"
                    />
                  </pattern>
                </defs>
              </svg>
              <p
                className="sc-bwzfXH kVijnH"
                onClick={[Function]}
                result="W"
                type="past"
              >
                21-14
              </p>
            </div>
            <p
              className="sc-htoDjs dhtSTP"
              onClick={[Function]}
            >
              <span>
                2
              </span>
              <span>
                0
              </span>
              <span>
                0
              </span>
              <span>
                7
              </span>
            </p>
          </div>
          <div
            className="sc-bZQynM gIDkKP"
            result="W"
          >
            <p
              className="sc-htoDjs bswFnH"
              onClick={[Function]}
            >
              <span>
                2
              </span>
              <span>
                0
              </span>
              <span>
                0
              </span>
              <span>
                8
              </span>
            </p>
            <div
              className="sc-gzVnrw ffITrg"
            >
              <svg
                className="sc-bdVaJa bOzLWC"
                height="40"
                result="W"
                type="past"
                viewBox="-1 -1 55 32"
                width="60"
              >
                <title>
                  2008 Notre Dame win by a score of 28 to 21.
                </title>
                <path
                  className="football"
                  d="M24.3585167,0.063430208 C35.1119935,-0.6284714 46.6072293,4.36977614 52.597914,13.6040857 C54.7297115,16.8900946 47.7985071,22.2410883 45.5381744,23.9389606 C40.8288076,27.476048 35.0715102,29.4979341 29.2104611,29.9219608 C18.5877272,30.6905583 5.76969773,25.7610451 0.275655548,16.0523187 C-1.54345102,12.8377005 6.1544002,7.27463607 8.34504921,5.68440188 C13.0321845,2.281693 18.5929238,0.434412586 24.3585166,0.0634300975"
                  fill="url(#fill-pattern-2008-4)"
                  onClick={[Function]}
                />
                <defs>
                  <pattern
                    className="pattern"
                    height="10"
                    id="fill-pattern-2008-4"
                    patternTransform="rotate(45 50 50)"
                    patternUnits="userSpaceOnUse"
                    width="3"
                  >
                    <rect
                      height="10"
                      width="10"
                    />
                    <line
                      y2="10"
                    />
                  </pattern>
                </defs>
              </svg>
              <p
                className="sc-bwzfXH kVijnH"
                onClick={[Function]}
                result="W"
                type="past"
              >
                28-21
              </p>
              <div
                className="sc-htpNat jNkVgE"
                type="left"
              >
                 
              </div>
              <div
                className="sc-htpNat dVtQQo"
                type="right"
              >
                 
              </div>
            </div>
          </div>
          <div
            className="sc-bZQynM dvcDQq"
            result="L"
          >
            <div
              className="sc-gzVnrw ffITrg"
            >
              <svg
                className="sc-bdVaJa hzVQWl"
                height="40"
                result="L"
                type="past"
                viewBox="-1 -1 55 32"
                width="60"
              >
                <title>
                  2009 Notre Dame loss by a score of 38 to 45.
                </title>
                <path
                  className="football"
                  d="M24.3585167,0.063430208 C35.1119935,-0.6284714 46.6072293,4.36977614 52.597914,13.6040857 C54.7297115,16.8900946 47.7985071,22.2410883 45.5381744,23.9389606 C40.8288076,27.476048 35.0715102,29.4979341 29.2104611,29.9219608 C18.5877272,30.6905583 5.76969773,25.7610451 0.275655548,16.0523187 C-1.54345102,12.8377005 6.1544002,7.27463607 8.34504921,5.68440188 C13.0321845,2.281693 18.5929238,0.434412586 24.3585166,0.0634300975"
                  fill="url(#fill-pattern-2009-11)"
                  onClick={[Function]}
                />
                <defs>
                  <pattern
                    className="pattern"
                    height="10"
                    id="fill-pattern-2009-11"
                    patternTransform="rotate(45 50 50)"
                    patternUnits="userSpaceOnUse"
                    width="3"
                  >
                    <rect
                      height="10"
                      width="10"
                    />
                    <line
                      y2="10"
                    />
                  </pattern>
                </defs>
              </svg>
              <p
                className="sc-bwzfXH kVijnH"
                onClick={[Function]}
                result="L"
                type="past"
              >
                38-45
              </p>
            </div>
            <p
              className="sc-htoDjs dhtSTP"
              onClick={[Function]}
            >
              <span>
                2
              </span>
              <span>
                0
              </span>
              <span>
                0
              </span>
              <span>
                9
              </span>
            </p>
          </div>
          <div
            className="sc-bZQynM gIDkKP"
            result="L"
          >
            <p
              className="sc-htoDjs bswFnH"
              onClick={[Function]}
            >
              <span>
                2
              </span>
              <span>
                0
              </span>
              <span>
                1
              </span>
              <span>
                0
              </span>
            </p>
            <div
              className="sc-gzVnrw ffITrg"
            >
              <svg
                className="sc-bdVaJa bTzeLw"
                height="40"
                result="L"
                type="past"
                viewBox="-1 -1 55 32"
                width="60"
              >
                <title>
                  2010 Notre Dame loss by a score of 14 to 37.
                </title>
                <path
                  className="football"
                  d="M24.3585167,0.063430208 C35.1119935,-0.6284714 46.6072293,4.36977614 52.597914,13.6040857 C54.7297115,16.8900946 47.7985071,22.2410883 45.5381744,23.9389606 C40.8288076,27.476048 35.0715102,29.4979341 29.2104611,29.9219608 C18.5877272,30.6905583 5.76969773,25.7610451 0.275655548,16.0523187 C-1.54345102,12.8377005 6.1544002,7.27463607 8.34504921,5.68440188 C13.0321845,2.281693 18.5929238,0.434412586 24.3585166,0.0634300975"
                  fill="url(#fill-pattern-2010-3)"
                  onClick={[Function]}
                />
                <defs>
                  <pattern
                    className="pattern"
                    height="10"
                    id="fill-pattern-2010-3"
                    patternTransform="rotate(45 50 50)"
                    patternUnits="userSpaceOnUse"
                    width="3"
                  >
                    <rect
                      height="10"
                      width="10"
                    />
                    <line
                      y2="10"
                    />
                  </pattern>
                </defs>
              </svg>
              <p
                className="sc-bwzfXH kVijnH"
                onClick={[Function]}
                result="L"
                type="past"
              >
                14-37
              </p>
              <div
                className="sc-htpNat jNkVgE"
                type="left"
              >
                 
              </div>
              <div
                className="sc-htpNat dVtQQo"
                type="right"
              >
                <div>
                   
                </div>
              </div>
            </div>
          </div>
          <div
            className="sc-bZQynM dvcDQq"
            result="W"
          >
            <div
              className="sc-gzVnrw ffITrg"
            >
              <svg
                className="sc-bdVaJa eGMcze"
                height="40"
                result="W"
                type="past"
                viewBox="-1 -1 55 32"
                width="60"
              >
                <title>
                  2019 Notre Dame win by a score of 45 to 24.
                </title>
                <path
                  className="football"
                  d="M24.3585167,0.063430208 C35.1119935,-0.6284714 46.6072293,4.36977614 52.597914,13.6040857 C54.7297115,16.8900946 47.7985071,22.2410883 45.5381744,23.9389606 C40.8288076,27.476048 35.0715102,29.4979341 29.2104611,29.9219608 C18.5877272,30.6905583 5.76969773,25.7610451 0.275655548,16.0523187 C-1.54345102,12.8377005 6.1544002,7.27463607 8.34504921,5.68440188 C13.0321845,2.281693 18.5929238,0.434412586 24.3585166,0.0634300975"
                  fill="url(#fill-pattern-2019-11)"
                  onClick={[Function]}
                />
                <defs>
                  <pattern
                    className="pattern"
                    height="10"
                    id="fill-pattern-2019-11"
                    patternTransform="rotate(45 50 50)"
                    patternUnits="userSpaceOnUse"
                    width="3"
                  >
                    <rect
                      height="10"
                      width="10"
                    />
                    <line
                      y2="10"
                    />
                  </pattern>
                </defs>
              </svg>
              <p
                className="sc-bwzfXH kVijnH"
                onClick={[Function]}
                result="W"
                type="past"
              >
                45-24
              </p>
            </div>
            <p
              className="sc-htoDjs dhtSTP"
              onClick={[Function]}
            >
              <span>
                2
              </span>
              <span>
                0
              </span>
              <span>
                1
              </span>
              <span>
                9
              </span>
            </p>
          </div>
          <div
            className="sc-bZQynM gIDkKP"
          >
            <p
              className="sc-htoDjs bswFnH"
              onClick={[Function]}
            >
              <span>
                2
              </span>
              <span>
                0
              </span>
              <span>
                2
              </span>
              <span>
                0
              </span>
            </p>
            <div
              className="sc-gzVnrw ffITrg"
            >
              <svg
                className="sc-bdVaJa iPYigz"
                height="40"
                type="future"
                viewBox="-1 -1 55 32"
                width="60"
              >
                <title>
                  2020 Notre Dame game.
                </title>
                <path
                  className="football"
                  d="M24.3585167,0.063430208 C35.1119935,-0.6284714 46.6072293,4.36977614 52.597914,13.6040857 C54.7297115,16.8900946 47.7985071,22.2410883 45.5381744,23.9389606 C40.8288076,27.476048 35.0715102,29.4979341 29.2104611,29.9219608 C18.5877272,30.6905583 5.76969773,25.7610451 0.275655548,16.0523187 C-1.54345102,12.8377005 6.1544002,7.27463607 8.34504921,5.68440188 C13.0321845,2.281693 18.5929238,0.434412586 24.3585166,0.0634300975"
                  fill="url(#fill-pattern-2020-5)"
                  onClick={[Function]}
                />
                <g
                  className="laces"
                  onClick={[Function]}
                  transform="translate(14, 11)"
                >
                  <line
                    x1="-6.9388939e-16"
                    x2="26"
                    y1="4"
                    y2="4"
                  />
                  <line
                    x1="3"
                    x2="3"
                    y1="8"
                    y2="4.4408921e-16"
                  />
                  <line
                    x1="8"
                    x2="8"
                    y1="8"
                    y2="4.4408921e-16"
                  />
                  <line
                    x1="13"
                    x2="13"
                    y1="8"
                    y2="4.4408921e-16"
                  />
                  <line
                    x1="18"
                    x2="18"
                    y1="8"
                    y2="4.4408921e-16"
                  />
                  <line
                    x1="23"
                    x2="23"
                    y1="8"
                    y2="4.4408921e-16"
                  />
                </g>
                <defs>
                  <pattern
                    className="pattern"
                    height="10"
                    id="fill-pattern-2020-5"
                    patternTransform="rotate(45 50 50)"
                    patternUnits="userSpaceOnUse"
                    width="3"
                  >
                    <rect
                      height="10"
                      width="10"
                    />
                    <line
                      y2="10"
                    />
                  </pattern>
                </defs>
              </svg>
              <div
                className="sc-htpNat jNkVgE"
                type="left"
              >
                 
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots MatchupHistory Stanford 2019 1`] = `
<div
  style={
    Object {
      "textAlign": "center",
    }
  }
>
  <div
    className="sc-bxivhb jLzLIs"
    style={
      Object {
        "marginTop": "32px",
      }
    }
  >
    <div
      className="sc-ifAKCX dkFkWg"
    >
      <p>
        Matchup History
      </p>
    </div>
    <div
      className="sc-EHOje cFYpLY"
    >
      <div
        className="sc-dnqmqq bhlmYc"
      >
        <div
          className="sc-iwsKbI krGmiY"
        >
          <div>
            <p>
              Meetings
            </p>
            <p>
              34
            </p>
          </div>
          <div>
            <p>
              Overall Record
            </p>
            <p>
              21
              -
              13
              -
              0
            </p>
          </div>
          <div>
            <p>
              Away
               Record
            </p>
            <p>
              8
              -
              9
              -
              0
            </p>
          </div>
        </div>
        <div
          className="sc-gZMcBi hAREgt"
        >
          <div
            className="sc-bZQynM gIDkKP"
            result="W"
          >
            <p
              className="sc-htoDjs bswFnH"
              onClick={[Function]}
            >
              <span>
                1
              </span>
              <span>
                9
              </span>
              <span>
                2
              </span>
              <span>
                4
              </span>
            </p>
            <div
              className="sc-gzVnrw ffITrg"
            >
              <svg
                className="sc-bdVaJa eGMcze"
                height="40"
                result="W"
                type="past"
                viewBox="-1 -1 55 32"
                width="60"
              >
                <title>
                  1924 Notre Dame win by a score of 27 to 10.
                </title>
                <path
                  className="football"
                  d="M24.3585167,0.063430208 C35.1119935,-0.6284714 46.6072293,4.36977614 52.597914,13.6040857 C54.7297115,16.8900946 47.7985071,22.2410883 45.5381744,23.9389606 C40.8288076,27.476048 35.0715102,29.4979341 29.2104611,29.9219608 C18.5877272,30.6905583 5.76969773,25.7610451 0.275655548,16.0523187 C-1.54345102,12.8377005 6.1544002,7.27463607 8.34504921,5.68440188 C13.0321845,2.281693 18.5929238,0.434412586 24.3585166,0.0634300975"
                  fill="url(#fill-pattern-1924-9)"
                  onClick={[Function]}
                />
                <defs>
                  <pattern
                    className="pattern"
                    height="10"
                    id="fill-pattern-1924-9"
                    patternTransform="rotate(45 50 50)"
                    patternUnits="userSpaceOnUse"
                    width="3"
                  >
                    <rect
                      height="10"
                      width="10"
                    />
                    <line
                      y2="10"
                    />
                  </pattern>
                </defs>
              </svg>
              <p
                className="sc-bwzfXH kVijnH"
                onClick={[Function]}
                result="W"
                type="past"
              >
                27-10
              </p>
              <div
                className="sc-htpNat dVtQQo"
                type="right"
              >
                <div>
                   
                </div>
              </div>
            </div>
          </div>
          <div
            className="sc-bZQynM dvcDQq"
            result="L"
          >
            <div
              className="sc-gzVnrw ffITrg"
            >
              <svg
                className="sc-bdVaJa hzVQWl"
                height="40"
                result="L"
                type="past"
                viewBox="-1 -1 55 32"
                width="60"
              >
                <title>
                  2013 Notre Dame loss by a score of 20 to 27.
                </title>
                <path
                  className="football"
                  d="M24.3585167,0.063430208 C35.1119935,-0.6284714 46.6072293,4.36977614 52.597914,13.6040857 C54.7297115,16.8900946 47.7985071,22.2410883 45.5381744,23.9389606 C40.8288076,27.476048 35.0715102,29.4979341 29.2104611,29.9219608 C18.5877272,30.6905583 5.76969773,25.7610451 0.275655548,16.0523187 C-1.54345102,12.8377005 6.1544002,7.27463607 8.34504921,5.68440188 C13.0321845,2.281693 18.5929238,0.434412586 24.3585166,0.0634300975"
                  fill="url(#fill-pattern-2013-11)"
                  onClick={[Function]}
                />
                <defs>
                  <pattern
                    className="pattern"
                    height="10"
                    id="fill-pattern-2013-11"
                    patternTransform="rotate(45 50 50)"
                    patternUnits="userSpaceOnUse"
                    width="3"
                  >
                    <rect
                      height="10"
                      width="10"
                    />
                    <line
                      y2="10"
                    />
                  </pattern>
                </defs>
              </svg>
              <p
                className="sc-bwzfXH kVijnH"
                onClick={[Function]}
                result="L"
                type="past"
              >
                20-27
              </p>
            </div>
            <p
              className="sc-htoDjs dhtSTP"
              onClick={[Function]}
            >
              <span>
                2
              </span>
              <span>
                0
              </span>
              <span>
                1
              </span>
              <span>
                3
              </span>
            </p>
          </div>
          <div
            className="sc-bZQynM gIDkKP"
            result="W"
          >
            <p
              className="sc-htoDjs bswFnH"
              onClick={[Function]}
            >
              <span>
                2
              </span>
              <span>
                0
              </span>
              <span>
                1
              </span>
              <span>
                4
              </span>
            </p>
            <div
              className="sc-gzVnrw ffITrg"
            >
              <svg
                className="sc-bdVaJa bOzLWC"
                height="40"
                result="W"
                type="past"
                viewBox="-1 -1 55 32"
                width="60"
              >
                <title>
                  2014 Notre Dame win by a score of 17 to 14.
                </title>
                <path
                  className="football"
                  d="M24.3585167,0.063430208 C35.1119935,-0.6284714 46.6072293,4.36977614 52.597914,13.6040857 C54.7297115,16.8900946 47.7985071,22.2410883 45.5381744,23.9389606 C40.8288076,27.476048 35.0715102,29.4979341 29.2104611,29.9219608 C18.5877272,30.6905583 5.76969773,25.7610451 0.275655548,16.0523187 C-1.54345102,12.8377005 6.1544002,7.27463607 8.34504921,5.68440188 C13.0321845,2.281693 18.5929238,0.434412586 24.3585166,0.0634300975"
                  fill="url(#fill-pattern-2014-4)"
                  onClick={[Function]}
                />
                <defs>
                  <pattern
                    className="pattern"
                    height="10"
                    id="fill-pattern-2014-4"
                    patternTransform="rotate(45 50 50)"
                    patternUnits="userSpaceOnUse"
                    width="3"
                  >
                    <rect
                      height="10"
                      width="10"
                    />
                    <line
                      y2="10"
                    />
                  </pattern>
                </defs>
              </svg>
              <p
                className="sc-bwzfXH kVijnH"
                onClick={[Function]}
                result="W"
                type="past"
              >
                17-14
              </p>
              <div
                className="sc-htpNat jNkVgE"
                type="left"
              >
                 
              </div>
              <div
                className="sc-htpNat dVtQQo"
                type="right"
              >
                 
              </div>
            </div>
          </div>
          <div
            className="sc-bZQynM dvcDQq"
            result="L"
          >
            <div
              className="sc-gzVnrw ffITrg"
            >
              <svg
                className="sc-bdVaJa hzVQWl"
                height="40"
                result="L"
                type="past"
                viewBox="-1 -1 55 32"
                width="60"
              >
                <title>
                  2015 Notre Dame loss by a score of 36 to 38.
                </title>
                <path
                  className="football"
                  d="M24.3585167,0.063430208 C35.1119935,-0.6284714 46.6072293,4.36977614 52.597914,13.6040857 C54.7297115,16.8900946 47.7985071,22.2410883 45.5381744,23.9389606 C40.8288076,27.476048 35.0715102,29.4979341 29.2104611,29.9219608 C18.5877272,30.6905583 5.76969773,25.7610451 0.275655548,16.0523187 C-1.54345102,12.8377005 6.1544002,7.27463607 8.34504921,5.68440188 C13.0321845,2.281693 18.5929238,0.434412586 24.3585166,0.0634300975"
                  fill="url(#fill-pattern-2015-11)"
                  onClick={[Function]}
                />
                <defs>
                  <pattern
                    className="pattern"
                    height="10"
                    id="fill-pattern-2015-11"
                    patternTransform="rotate(45 50 50)"
                    patternUnits="userSpaceOnUse"
                    width="3"
                  >
                    <rect
                      height="10"
                      width="10"
                    />
                    <line
                      y2="10"
                    />
                  </pattern>
                </defs>
              </svg>
              <p
                className="sc-bwzfXH kVijnH"
                onClick={[Function]}
                result="L"
                type="past"
              >
                36-38
              </p>
            </div>
            <p
              className="sc-htoDjs dhtSTP"
              onClick={[Function]}
            >
              <span>
                2
              </span>
              <span>
                0
              </span>
              <span>
                1
              </span>
              <span>
                5
              </span>
            </p>
          </div>
          <div
            className="sc-bZQynM gIDkKP"
            result="L"
          >
            <p
              className="sc-htoDjs bswFnH"
              onClick={[Function]}
            >
              <span>
                2
              </span>
              <span>
                0
              </span>
              <span>
                1
              </span>
              <span>
                6
              </span>
            </p>
            <div
              className="sc-gzVnrw ffITrg"
            >
              <svg
                className="sc-bdVaJa bTzeLw"
                height="40"
                result="L"
                type="past"
                viewBox="-1 -1 55 32"
                width="60"
              >
                <title>
                  2016 Notre Dame loss by a score of 10 to 17.
                </title>
                <path
                  className="football"
                  d="M24.3585167,0.063430208 C35.1119935,-0.6284714 46.6072293,4.36977614 52.597914,13.6040857 C54.7297115,16.8900946 47.7985071,22.2410883 45.5381744,23.9389606 C40.8288076,27.476048 35.0715102,29.4979341 29.2104611,29.9219608 C18.5877272,30.6905583 5.76969773,25.7610451 0.275655548,16.0523187 C-1.54345102,12.8377005 6.1544002,7.27463607 8.34504921,5.68440188 C13.0321845,2.281693 18.5929238,0.434412586 24.3585166,0.0634300975"
                  fill="url(#fill-pattern-2016-6)"
                  onClick={[Function]}
                />
                <defs>
                  <pattern
                    className="pattern"
                    height="10"
                    id="fill-pattern-2016-6"
                    patternTransform="rotate(45 50 50)"
                    patternUnits="userSpaceOnUse"
                    width="3"
                  >
                    <rect
                      height="10"
                      width="10"
                    />
                    <line
                      y2="10"
                    />
                  </pattern>
                </defs>
              </svg>
              <p
                className="sc-bwzfXH kVijnH"
                onClick={[Function]}
                result="L"
                type="past"
              >
                10-17
              </p>
              <div
                className="sc-htpNat jNkVgE"
                type="left"
              >
                 
              </div>
              <div
                className="sc-htpNat dVtQQo"
                type="right"
              >
                 
              </div>
            </div>
          </div>
          <div
            className="sc-bZQynM dvcDQq"
            result="L"
          >
            <div
              className="sc-gzVnrw ffITrg"
            >
              <svg
                className="sc-bdVaJa hzVQWl"
                height="40"
                result="L"
                type="past"
                viewBox="-1 -1 55 32"
                width="60"
              >
                <title>
                  2017 Notre Dame loss by a score of 20 to 38.
                </title>
                <path
                  className="football"
                  d="M24.3585167,0.063430208 C35.1119935,-0.6284714 46.6072293,4.36977614 52.597914,13.6040857 C54.7297115,16.8900946 47.7985071,22.2410883 45.5381744,23.9389606 C40.8288076,27.476048 35.0715102,29.4979341 29.2104611,29.9219608 C18.5877272,30.6905583 5.76969773,25.7610451 0.275655548,16.0523187 C-1.54345102,12.8377005 6.1544002,7.27463607 8.34504921,5.68440188 C13.0321845,2.281693 18.5929238,0.434412586 24.3585166,0.0634300975"
                  fill="url(#fill-pattern-2017-11)"
                  onClick={[Function]}
                />
                <defs>
                  <pattern
                    className="pattern"
                    height="10"
                    id="fill-pattern-2017-11"
                    patternTransform="rotate(45 50 50)"
                    patternUnits="userSpaceOnUse"
                    width="3"
                  >
                    <rect
                      height="10"
                      width="10"
                    />
                    <line
                      y2="10"
                    />
                  </pattern>
                </defs>
              </svg>
              <p
                className="sc-bwzfXH kVijnH"
                onClick={[Function]}
                result="L"
                type="past"
              >
                20-38
              </p>
            </div>
            <p
              className="sc-htoDjs dhtSTP"
              onClick={[Function]}
            >
              <span>
                2
              </span>
              <span>
                0
              </span>
              <span>
                1
              </span>
              <span>
                7
              </span>
            </p>
          </div>
          <div
            className="sc-bZQynM gIDkKP"
            result="W"
          >
            <p
              className="sc-htoDjs bswFnH"
              onClick={[Function]}
            >
              <span>
                2
              </span>
              <span>
                0
              </span>
              <span>
                1
              </span>
              <span>
                8
              </span>
            </p>
            <div
              className="sc-gzVnrw ffITrg"
            >
              <svg
                className="sc-bdVaJa bOzLWC"
                height="40"
                result="W"
                type="past"
                viewBox="-1 -1 55 32"
                width="60"
              >
                <title>
                  2018 Notre Dame win by a score of 38 to 17.
                </title>
                <path
                  className="football"
                  d="M24.3585167,0.063430208 C35.1119935,-0.6284714 46.6072293,4.36977614 52.597914,13.6040857 C54.7297115,16.8900946 47.7985071,22.2410883 45.5381744,23.9389606 C40.8288076,27.476048 35.0715102,29.4979341 29.2104611,29.9219608 C18.5877272,30.6905583 5.76969773,25.7610451 0.275655548,16.0523187 C-1.54345102,12.8377005 6.1544002,7.27463607 8.34504921,5.68440188 C13.0321845,2.281693 18.5929238,0.434412586 24.3585166,0.0634300975"
                  fill="url(#fill-pattern-2018-4)"
                  onClick={[Function]}
                />
                <defs>
                  <pattern
                    className="pattern"
                    height="10"
                    id="fill-pattern-2018-4"
                    patternTransform="rotate(45 50 50)"
                    patternUnits="userSpaceOnUse"
                    width="3"
                  >
                    <rect
                      height="10"
                      width="10"
                    />
                    <line
                      y2="10"
                    />
                  </pattern>
                </defs>
              </svg>
              <p
                className="sc-bwzfXH kVijnH"
                onClick={[Function]}
                result="W"
                type="past"
              >
                38-17
              </p>
              <div
                className="sc-htpNat jNkVgE"
                type="left"
              >
                 
              </div>
              <div
                className="sc-htpNat dVtQQo"
                type="right"
              >
                 
              </div>
            </div>
          </div>
          <div
            className="sc-bZQynM dvcDQq"
            result="W"
          >
            <div
              className="sc-gzVnrw ffITrg"
            >
              <svg
                className="sc-bdVaJa bkcFue"
                height="40"
                result="W"
                type="past"
                viewBox="-1 -1 55 32"
                width="60"
              >
                <title>
                  2019 Notre Dame win by a score of 45 to 24.
                </title>
                <path
                  className="football"
                  d="M24.3585167,0.063430208 C35.1119935,-0.6284714 46.6072293,4.36977614 52.597914,13.6040857 C54.7297115,16.8900946 47.7985071,22.2410883 45.5381744,23.9389606 C40.8288076,27.476048 35.0715102,29.4979341 29.2104611,29.9219608 C18.5877272,30.6905583 5.76969773,25.7610451 0.275655548,16.0523187 C-1.54345102,12.8377005 6.1544002,7.27463607 8.34504921,5.68440188 C13.0321845,2.281693 18.5929238,0.434412586 24.3585166,0.0634300975"
                  fill="url(#fill-pattern-2019-11)"
                  onClick={[Function]}
                />
                <defs>
                  <pattern
                    className="pattern"
                    height="10"
                    id="fill-pattern-2019-11"
                    patternTransform="rotate(45 50 50)"
                    patternUnits="userSpaceOnUse"
                    width="3"
                  >
                    <rect
                      height="10"
                      width="10"
                    />
                    <line
                      y2="10"
                    />
                  </pattern>
                </defs>
              </svg>
              <p
                className="sc-bwzfXH bDmYvW"
                onClick={[Function]}
                result="W"
                type="past"
              >
                45-24
              </p>
            </div>
            <p
              className="sc-htoDjs kvMjcz"
              onClick={[Function]}
            >
              <span>
                2
              </span>
              <span>
                0
              </span>
              <span>
                1
              </span>
              <span>
                9
              </span>
            </p>
          </div>
          <div
            className="sc-bZQynM gIDkKP"
          >
            <p
              className="sc-htoDjs bswFnH"
              onClick={[Function]}
            >
              <span>
                2
              </span>
              <span>
                0
              </span>
              <span>
                2
              </span>
              <span>
                0
              </span>
            </p>
            <div
              className="sc-gzVnrw ffITrg"
            >
              <svg
                className="sc-bdVaJa iPYigz"
                height="40"
                type="future"
                viewBox="-1 -1 55 32"
                width="60"
              >
                <title>
                  2020 Notre Dame game.
                </title>
                <path
                  className="football"
                  d="M24.3585167,0.063430208 C35.1119935,-0.6284714 46.6072293,4.36977614 52.597914,13.6040857 C54.7297115,16.8900946 47.7985071,22.2410883 45.5381744,23.9389606 C40.8288076,27.476048 35.0715102,29.4979341 29.2104611,29.9219608 C18.5877272,30.6905583 5.76969773,25.7610451 0.275655548,16.0523187 C-1.54345102,12.8377005 6.1544002,7.27463607 8.34504921,5.68440188 C13.0321845,2.281693 18.5929238,0.434412586 24.3585166,0.0634300975"
                  fill="url(#fill-pattern-2020-5)"
                  onClick={[Function]}
                />
                <g
                  className="laces"
                  onClick={[Function]}
                  transform="translate(14, 11)"
                >
                  <line
                    x1="-6.9388939e-16"
                    x2="26"
                    y1="4"
                    y2="4"
                  />
                  <line
                    x1="3"
                    x2="3"
                    y1="8"
                    y2="4.4408921e-16"
                  />
                  <line
                    x1="8"
                    x2="8"
                    y1="8"
                    y2="4.4408921e-16"
                  />
                  <line
                    x1="13"
                    x2="13"
                    y1="8"
                    y2="4.4408921e-16"
                  />
                  <line
                    x1="18"
                    x2="18"
                    y1="8"
                    y2="4.4408921e-16"
                  />
                  <line
                    x1="23"
                    x2="23"
                    y1="8"
                    y2="4.4408921e-16"
                  />
                </g>
                <defs>
                  <pattern
                    className="pattern"
                    height="10"
                    id="fill-pattern-2020-5"
                    patternTransform="rotate(45 50 50)"
                    patternUnits="userSpaceOnUse"
                    width="3"
                  >
                    <rect
                      height="10"
                      width="10"
                    />
                    <line
                      y2="10"
                    />
                  </pattern>
                </defs>
              </svg>
              <div
                className="sc-htpNat jNkVgE"
                type="left"
              >
                 
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
